--- a/Chihuahua_or_Muffin.ipynb
+++ b/Chihuahua_or_Muffin.ipynb
@@ -477,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0b1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
