Adición de métricas y comentarios

--- a/Chihuahua_or_Muffin.ipynb
+++ b/Chihuahua_or_Muffin.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chihuahua_or_Muffin\n",
+    "¿Es un Chihuahua o es un Muffin?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -17,6 +25,18 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import itertools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 1.1\n",
+    "- Reducción de 10 a 5 epochs para limitar el sobreajuste.\n",
+    "- Adición de matriz de confusión y variables de desempeño para observar la eficiencia del modelo.\n",
+    "- Cambio de modelo de ResNet50 a VGG16 basado en el paper previamente referenciado.\n",
+    "- Adición de callbacks para realizar ajustes paulatinos al modelo.\n",
+    "- Adición de validation data para efectuar un entrenamiento más específico."
    ]
   },
   {
@@ -476,6 +496,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy:  0.9733542319749217\n",
+      "precision:  0.9797687861271677\n",
+      "recall:  0.9713467048710601\n",
+      "f1 score:  0.9755395683453237\n"
+     ]
+    }
+   ],
+   "source": [
+    "true_positives = 339\n",
+    "true_negatives = 282\n",
+    "false_positives = 7\n",
+    "false_negatives = 10\n",
+    "\n",
+    "mat_accuracy = (true_positives + true_negatives)/(true_positives+true_negatives+false_positives+false_negatives)\n",
+    "mat_precision = true_positives/(true_positives+false_positives)\n",
+    "mat_recall = true_positives/(true_positives+false_negatives)\n",
+    "mat_f1score = (2*mat_precision*mat_recall)/(mat_precision+mat_recall)\n",
+    "\n",
+    "print(\"accuracy: \", mat_accuracy)\n",
+    "print(\"precision: \", mat_precision)\n",
+    "print(\"recall: \", mat_recall)\n",
+    "print(\"f1 score: \", mat_f1score)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -514,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0b1"
   }
  },
  "nbformat": 4,
